syntax = "proto3";
package cosmos.bank.v2;

import "gogoproto/gogo.proto";
import "cosmos/bank/v2/bank.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "cosmossdk.io/x/bank/v2/types";

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "cosmos-sdk/x/bank/v2/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/bank parameters to update.
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgSend represents a message to send coins from one account to another.
message MsgSend {
  option (cosmos.msg.v1.signer) = "from_address";
  option (amino.name)           = "cosmos-sdk/x/bank/v2/MsgSend";

  string   from_address                    = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string   to_address                      = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  repeated cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable)     = false,
    (amino.dont_omitempty)   = true,
    (amino.encoding)         = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

// MsgSendResponse defines the response structure for executing a MsgSend message.
message MsgSendResponse {}

// MsgCreateDenom represents a message to create new denom.
message MsgCreateDenom {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "cosmos-sdk/x/bank/v2/MsgCreateDenom";

  string sender   = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string subdenom = 2;
}

// MsgCreateDenomResponse defines the response structure for executing a MsgCreateDenom message.
message MsgCreateDenomResponse {
  string new_token_denom = 1;
}

// MsgChangeAdmin represents a message to change admin of denom.
message MsgChangeAdmin {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name)           = "cosmos-sdk/x/bank/v2/MsgChangeAdmin";

  string sender    = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string denom     = 2;
  string new_admin = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgChangeAdminResponse defines the response structure for executing a MsgChangeAdmin message.
message MsgChangeAdminResponse {}

// MsgMint is the Msg/Mint request type.
message MsgMint {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "cosmos-sdk/x/bank/v2/MsgMint";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  string                   to_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount     = 3 [(gogoproto.nullable) = false];
}

// MsgMint defines the response structure for executing a MsgMint message.
message MsgMintResponse {}
